--- a/plugins/zlux-plugins/action.yml
+++ b/plugins/zlux-plugins/action.yml
@@ -86,24 +86,34 @@ runs:
         done
       shell: bash
       
-    - name: 'clone previous version'
+    - name: 'clone v2.x/master version'
       run: |
         framework_value=$(cat ../$REPOSITORY_NAME/pluginDefinition.json | grep -oP '"framework":\s*"\K[^"]+')
         if [[ "$framework_value" == "angular" || "$framework_value" == "angular2" ]]; then
           echo "this is angular plugin"
           if [ "${{ inputs.clone-v2 }}" ]; then
-            mkdir -p ../zlux/oldv2
-            cd ../zlux/oldv2
-            git clone https://github.com/zowe/$REPOSITORY_NAME.git -b v2.x/master
-            packages=$(find ./${REPOSITORY_NAME} -name package.json | { grep -v node_modules || true; })
-            for package in $packages
-            do
-              if [ $(node -e "const fs = require('fs'); const pac = JSON.parse(fs.readFileSync('${package}')); if (pac.scripts && pac.scripts.build) { console.log('true')};") = "true" ]
-              then
-                sh -c "cd `dirname $package` && npm ci && npm run build "
-              fi
-            done
-            cp -rf $REPOSITORY_NAME/web/* ../$REPOSITORY_NAME/web
+            mkdir -p ../zlux/v2clone && cd ../zlux/v2clone
+            git clone -b v2.x/master https://github.com/zowe/zowe-install-packaging.git
+            manifest_file="zowe-install-packaging/manifest.json.template"
+            artifactory_repo_name="org.zowe.zlux.${REPOSITORY_NAME}"
+            v2_version=$(cat zowe-install-packaging/manifest.json.template | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | xargs)
+            binary_dependencies=$(sed -n '/"binaryDependencies": {/,/^}/p' "$manifest_file")
+            if [[ -z "$binary_dependencies" ]]; then
+              echo "No 'binaryDependencies' section found in the manifest."
+              exit 1
+            fi
+            artifact=$(echo "$binary_dependencies" | grep -A 10 "\"$artifactory_repo_name\":" | grep -m 1 '"artifact"' | sed 's/.*"artifact": "\(.*\)".*/\1/')
+            artifact_tar=$(echo "$artifact" | sed 's/.pax$/.tar/')
+            if [[ -n "$artifact_tar" ]]; then
+              echo "The artifact for repository '$artifactory_repo_name' is: $artifact_tar"
+            else
+              echo "Repository '$artifactory_repo_name' not found in binaryDependencies."
+            fi
+            URL='https://zowe.jfrog.io/zowe/list/libs-snapshot-local/org/zowe/zlux'
+            curl "${URL}/${REPOSITORY_NAME}/${v2_version}-V2.X-RC/${artifact_tar}" -k -o v2plugin.tar
+            tar xpoUf v2plugin.tar
+            cp -rf web/* ../$REPOSITORY_NAME/web
+            cd .. && rm -rf v2clone     
           fi
         else
           echo "not angular"
