Update node to v18

--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -1,5 +1,5 @@
 # Node version
-DEFAULT_NODE_VERSION=16
+DEFAULT_NODE_VERSION=18
 
 # NPM
 DEFAULT_NPM_PRIVATE_INSTALL_REGISTRY=https://zowe.jfrog.io/zowe/api/npm/npm-release/
@@ -22,8 +22,8 @@ ZOWE_MANIFEST_URL=https://raw.githubusercontent.com/zowe/zowe-install-packaging/
 
 PAX_HOSTNAME=zzow08.zowe.marist.cloud
 PAX_SSH_PORT=65522
-NODE_VERSION=v16.20.2
+NODE_VERSION=v18.14.2
 
-MARIST_NODE=/ZOWE/node/node-v16.20.2-os390-s390x
+MARIST_NODE=/ZOWE/node/node-v18.14.2
 
 SYSTEM_APPS=admin-notification-app web-browser-app
