--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -26,3 +26,5 @@ NODE_VERSION=v18.14.2
 MARIST_NODE=/ZOWE/node/node-v18.14.2
 
 SYSTEM_APPS=admin-notification-app web-browser-app
+REPOSITORY_NAME=zlux-build
+CURRENT_BRANCH=v3.x/rc
