--- a/plugins/bump-version/action.yaml
+++ b/plugins/bump-version/action.yaml
@@ -7,7 +7,7 @@ inputs:
   version:
     description: 'which version level needed to bump version, eg. npm version patch'
     required: false
-    default: 'minor'
+    default: 'patch'
 
 runs:
   using: 'node12'
